--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lovelyyyyyyy haaa hhhaaaa</title>
+    <title> member will be join </title>
 </head>
 <body>
-    <p>this is my about page</p>
+    <p>it is the new file</p>
 </body>
 </html>
