--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME--my Awesome Website</title>
+    <title>Home-----contact other people</title>
 </head>
 <body>
-    my Awesome Website
+    hii how are you it is the best python course but you want to know about git and github 
 </body>
 </html>
