--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title>lovelyyyyyyy haaa hhhaaaa</title>
 </head>
 <body>
-    <p>this is my about page</p>
+   About page
+   <footer>hii how are you</footer>
 </body>
 </html>
