--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home-----contact other people</title>
+    <title>Home-~--contact other people</title>
 </head>
 <body>
     hii how are you it is the best python course but you want to know about git and github 
