--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     hii how are you it is the best python course but you want to know about git and github 
+    <p>my awesome website</p>
+    <p>this is also awesome but not ahead of over the confident</p>
 </body>
 </html>
